--- a/src/Quote.css
+++ b/src/Quote.css
@@ -1,7 +1,6 @@
 .quote {
     display: flex;
     flex-direction: column;
-    color: rgb(102, 102, 153)
 }
 
 #quote {
